@@ -553,12 +553,28 @@ expr_stmt|;
 block|}
 for|for
 control|(
-name|LeafCollector
-name|c
-range|:
-name|collectors
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numCollectors
+condition|;
+operator|++
+name|i
 control|)
 block|{
+specifier|final
+name|LeafCollector
+name|c
+init|=
+name|collectors
+index|[
+name|i
+index|]
+decl_stmt|;
 name|c
 operator|.
 name|setScorer
